# substrate-tests

./: .gitignore  Cargo.toml  README.md  flake.nix
client_example/: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/node-staker/: Cargo.toml
pallets/node-staker/src/: benchmarking.rs  lib.rs
pallets/sudo-authorities/: Cargo.toml
pallets/sudo-authorities/src/: benchmarking.rs
pallets/user-manager/: Cargo.toml
pallets/user-manager/src/: benchmarking.rs
polkadot-launch/: config.json
runtime/: Cargo.toml  build.rs
runtime/csov/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
runtime/src/configs/: mod.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/tcsov/: Cargo.toml
scripts/: build.Dockerfile  move.Dockerfile
scripts/.tmp/: local_spec_raw.json
