[package]
name = "pallet-sudo-authorities"
version = "0.0.1"
description = "allows you to sudo change AURA and GRANDPA authorities"
authors = ["gheorghe@gheo.tech"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "28.0.0", default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
frame-support = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
frame-system = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
pallet-aura = { version = "27.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
pallet-grandpa = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-consensus-grandpa = { version = "0.19.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }

[dev-dependencies]
sp-core = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-io = { version = "30.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-runtime = { version = "31.0.1", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-grandpa/std",
	"sp-consensus-grandpa/std",
	"pallet-aura/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-grandpa/std",
	"pallet-aura/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-grandpa/std",
	"pallet-aura/std"
]
